--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ requires = [
     "setuptools<49.2.0",
     "wheel<=0.35.1",
     "Cython>=0.29.21,<3.0",  # Note: keep in sync with tools/cythonize.py
+    "hpy.devel @ git+https://github.com/hpyproject/hpy.git@8e20b89116c2993188157c09a6070a64f8efbd82#egg=hpy.devel"
 ]
 
 
